--- a/public/css/styles-private.css
+++ b/public/css/styles-private.css
@@ -239,3 +239,30 @@
     border-width: 9px 9px 9px 0;
     left: -9px;
 }
+
+
+
+
+
+
+
+
+
+.contact-remove {
+    color: #999;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    margin-right: 2px;
+}
+
+.contact-label {
+    background-color: #e4e4e4;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    cursor: default;
+    float: left;
+    margin-right: 5px;
+    margin-top: 5px;
+    padding: 0 5px;
+}
