--- a/phpApp/app/webroot/css/styles-private.css
+++ b/phpApp/app/webroot/css/styles-private.css
@@ -83,8 +83,6 @@
 
 .sidebar-nav li a:hover {
     text-decoration: underline;
-    /*color: #fff;
-    background: rgba(255,255,255,0.2);*/
 }
 
 .sidebar-nav li a:active,
@@ -245,14 +243,9 @@
     left: -9px;
 }
 
-
-
-
-
-
-
-
-
+/**
+ * Modal "Nueva conversacion" styles
+ */
 .contact-remove {
     color: #999;
     cursor: pointer;
