Resolve #5, resolve jcongote/JoinChat#14 - Añadir la posibilidad de iniciar sesión como invitado, guardando los valores de alias y del correo en indexedDb para futuros inicios de sesión como invitado o para el registro en la app

--- a/phpApp/app/webroot/css/styles-private.css
+++ b/phpApp/app/webroot/css/styles-private.css
@@ -107,6 +107,7 @@
 .sidebar-nav li span.icon {
     text-indent: 0;
     margin-right: 10px;
+    font-weight: normal;
 }
 
 .sidebar-nav li a:hover {
